k8s/shopper-api/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: shopper-api
  labels:
    name: shopper-api
