k8s/shopper-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopper-api-service
  namespace: shopper-api
spec:
  selector:
    app: shopper-api
  ports:
    - port: 80 # Ingress traffic port
      protocol: TCP
      targetPort: 8080 # Container application port
  type: NodePort
